<resources>
    <string name="app_name">LoginApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="email">Email</string>
    <string name="hello">Hello</string>
    <string name="logout">Logout</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_app_id">3255765041157398</string>
    <string name="fb_login_protocol_scheme">fb3255765041157398</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="or">or</string>
    <string name="address">Address</string>


</resources>