<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="40dp" />


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="70dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/button_login"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/login"/>


    <TextView
        android:id="@+id/textview_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/not_registered"/>
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/register"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textview_or"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/or"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="#FFFFFF" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />



</LinearLayout>